--- a/pom.xml
+++ b/pom.xml
@@ -120,11 +120,11 @@
 	 <distributionManagement>
         <repository>
             <id>maven-releases</id>
-            <url>http://54.66.24.153:8081/repository/maven-releases/</url>
+            <url>http://54.66.24.153:8081/repository/maven-releases/</http://13.233.86.104:8081/repository/maven-releases/>
         </repository>
         <snapshotRepository>
             <id>maven-snapshots</id>
-            <url>http://54.66.24.153:8081/repository/maven-snapshots/</url>
+            <url>http://54.66.24.153:8081/repository/maven-snapshots/</http://13.233.86.104:8081/repository/maven-snapshots/>
         </snapshotRepository>
     </distributionManagement>
 
